Update Launcher.java